<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    >

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        >


        <Button
            android:id="@+id/back"
            android:layout_height="50dp"
            android:layout_width="100dp"
            android:layout_marginLeft="10dp"
            android:text="BACK"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="140dp"
            android:layout_height="50dp"
            />

        <Button
            android:id="@+id/user_settings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="Settings"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/username"
        android:layout_height="30dp"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="30dp"
        android:text="Username"
        android:textAlignment="center"
        android:textSize="20sp"

        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/userID"
        android:layout_height="30dp"
        android:layout_width="fill_parent"
        android:layout_marginHorizontal="30dp"
        android:text="Username"
        android:textAlignment="center"
        android:textSize="20sp"

        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"

        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:layout_width="200dp"
            android:layout_height="250dp"
            android:orientation="vertical"

            >

        <TextView
            android:layout_height="40dp"
            android:layout_width="fill_parent"
            android:text="Stats:"
            android:textSize="20sp"

            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/games"
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:text="Games Played: 0"
            android:textSize="20sp"

            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/wins"
            android:layout_height="30dp"
            android:layout_width="fill_parent"
            android:text="Games Won: 0"
            android:textSize="20sp"

            android:textColor="@color/white"
            />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/friends"
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"

            >

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/teams_button"
                android:id="@+id/teams"
                android:backgroundTint="?attr/buttonTint"
                android:textColor="?attr/colorSecondary"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:text="Friends:"
                android:textSize="20sp"

                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/friend_buttons"
                android:orientation="horizontal"
                >
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                ></Space>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollList"
                    android:orientation="vertical"
                    >
                </LinearLayout>
            </ScrollView>


        </LinearLayout>
    </LinearLayout>


    </LinearLayout>