...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/username_display"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:textSize="25sp"
                android:layout_gravity="end"
                android:textColor="@color/white"
...
                android:textColor="@color/white"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/avatar_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_blank_avatar"
            android:layout_marginStart="5dp"
            />

...
