<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    >

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        >

        <Button
            android:id="@+id/back"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="back"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/top_text"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:text="Settings"
            android:textSize="20sp"

            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="400dp"
        android:layout_marginHorizontal="0dp"

        >

        <Button
            android:id="@+id/change_name"
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.05"
            android:text="Change Username"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.05"
            android:text="Change Password"
            android:backgroundTint="?attr/buttonTint"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"/>

    </LinearLayout>


    <Button
        android:id="@+id/delete_user"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="80dp"

        android:text="Delete Account"
        android:backgroundTint="?attr/buttonTint"
        android:textColor="?attr/colorSecondary"
        android:textStyle="bold"
        />

</LinearLayout>